--- a/Paper/paper.ipynb
+++ b/Paper/paper.ipynb
@@ -2,24 +2,142 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import os\n",
+    "import pathlib\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "import numpy as np\n",
+    "import tensorflow as tf\n",
+    "\n",
+    "from tensorflow.keras import layers\n",
+    "from tensorflow.keras import models\n",
+    "from IPython import display\n",
+    "\n",
+    "# Set the seed value for experiment reproducibility.\n",
+    "seed = 42\n",
+    "tf.random.set_seed(seed)\n",
+    "np.random.seed(seed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of total examples: 480\n",
+      "Example file tensor: tf.Tensor(b'.\\\\data\\\\SAVEE\\\\JE_a08.wav', shape=(), dtype=string)\n"
+     ]
+    }
+   ],
+   "source": [
+    "data_dir = \"./data/SAVEE\"\n",
+    "\n",
+    "filenames = tf.io.gfile.glob(str(data_dir) + '/*')\n",
+    "filenames = tf.random.shuffle(filenames)\n",
+    "num_samples = len(filenames)\n",
+    "print('Number of total examples:', num_samples)\n",
+    "print('Example file tensor:', filenames[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TensorShape([160868, 1])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_file = tf.io.read_file(f\"{data_dir}/DC_a01.wav\")\n",
+    "test_audio, _ = tf.audio.decode_wav(contents=test_file)\n",
+    "test_audio.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def decode_audio(audio_binary):\n",
+    "  # Decode WAV-encoded audio files to `float32` tensors, normalized\n",
+    "  # to the [-1.0, 1.0] range. Return `float32` audio and a sample rate.\n",
+    "  audio, _ = tf.audio.decode_wav(contents=audio_binary)\n",
+    "  # Since all the data is single channel (mono), drop the `channels`\n",
+    "  # axis from the array.\n",
+    "  return tf.squeeze(audio, axis=-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor([b'.\\\\data\\\\SAVEE\\\\JE' b'a08.wav'], shape=(2,), dtype=string)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(2,), dtype=string, numpy=array([b'.\\\\data\\\\SAVEE\\\\JE', b'a08.wav'], dtype=object)>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def get_label(file_path):\n",
+    "    parts = tf.strings.split( file_path, sep='_')\n",
+    "    print(parts)\n",
+    "    return parts\n",
+    "\n",
+    "get_label(filenames[0])\n"
+   ]
   }
  ],
  "metadata": {
   "interpreter": {
-   "hash": "f3be4d9f3d2480712a40d916a98573af54c4f7f55b3eb654146acb59bb550138"
+   "hash": "1e5983e64bdf840368ab29cea7e1e8f9b41dcdac8639741a33a347d09d965169"
   },
   "kernelspec": {
-   "display_name": "Python 3.10.4 ('venv': venv)",
+   "display_name": "Python 3.9.10 ('tf-gpu')",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.10.4"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.10"
   },
   "orig_nbformat": 4
  },
