--- a/Paper/traditional_methods.ipynb
+++ b/Paper/traditional_methods.ipynb
@@ -1251,7 +1251,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3.9.12 ('tf')",
+      "display_name": "Python 3.9.10 ('tf-gpu')",
       "language": "python",
       "name": "python3"
     },
@@ -1265,11 +1265,11 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.12"
+      "version": "3.9.10"
     },
     "vscode": {
       "interpreter": {
-        "hash": "871836a5f0f1bf0c6867b75cd438b55e040f08a9d0ea3b5e312386b476fa4aa9"
+        "hash": "1e5983e64bdf840368ab29cea7e1e8f9b41dcdac8639741a33a347d09d965169"
       }
     }
   },
