--- a/Paper/ESD_SAVEE_testing.ipynb
+++ b/Paper/ESD_SAVEE_testing.ipynb
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,11 +118,10 @@
     "        data_ops.Crop(),\n",
     "        data_ops.Normalize()]\n",
     "\n",
-    "data_preprocessing_for_SAVEE = lambda _: [ \n",
-    "        data_ops.Resample(ESD_max_sample_rate), # TODO why it doesn't work?\n",
-    "        data_ops.Crop(),\n",
-    "        data_ops.Normalize()\n",
-    "        ]"
+    "# data_preprocessing_for_SAVEE = lambda _: [ \n",
+    "#         data_ops.Crop(),\n",
+    "#         data_ops.Normalize()\n",
+    "#         ]"
    ]
   },
   {
@@ -160,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -233,51 +232,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:Using a while_loop for converting IO>AudioResample\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:Using a while_loop for converting IO>AudioResample\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:Using a while_loop for converting IO>AudioResample\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:Using a while_loop for converting IO>AudioResample\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:Using a while_loop for converting IO>AudioResample\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:Using a while_loop for converting IO>AudioResample\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -322,21 +279,21 @@
     }
    ],
    "source": [
-    "_, _, SAVEE_test_ds, _ = data_loader.load_datasets(SAVEE_df, SAVEE_max_sample_rate, 4, data_preprocessing_for_SAVEE, [70, 15, 15])"
+    "_, _, SAVEE_test_ds, _ = data_loader.load_datasets(SAVEE_df, ESD_max_sample_rate, 4, data_preprocessing, [70, 15, 15])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<ParallelMapDataset element_spec=(TensorSpec(shape=(176400, 1), dtype=tf.float32, name=None), TensorSpec(shape=(5,), dtype=tf.uint8, name=None))>"
+       "<ParallelMapDataset element_spec=(TensorSpec(shape=(64000, 1), dtype=tf.float32, name=None), TensorSpec(shape=(5,), dtype=tf.uint8, name=None))>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -438,14 +395,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "41/41 [==============================] - 32s 685ms/step - loss: 2.0560 - accuracy: 0.7172\n"
+      "41/41 [==============================] - 32s 683ms/step - loss: 2.0560 - accuracy: 0.7172\n"
      ]
     },
     {
@@ -454,7 +411,7 @@
        "[2.055967092514038, 0.7171755433082581]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,26 +422,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
-     "ename": "InvalidArgumentError",
-     "evalue": "Graph execution error:\n\n2 root error(s) found.\n  (0) INVALID_ARGUMENT:  Expected begin[0] in [0, 34927], but got 64000\n\t [[{{node Slice}}]]\n\t [[IteratorGetNext]]\n\t [[IteratorGetNext/_4]]\n  (1) INVALID_ARGUMENT:  Expected begin[0] in [0, 34927], but got 64000\n\t [[{{node Slice}}]]\n\t [[IteratorGetNext]]\n0 successful operations.\n0 derived errors ignored. [Op:__inference_test_function_13245]",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mInvalidArgumentError\u001b[0m                      Traceback (most recent call last)",
-      "\u001b[1;32md:\\Alessandra Boccuto\\Desktop\\Speech-Emotion-Recognition\\Paper\\ESD_SAVEE_testing.ipynb Cella 19\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Alessandra%20Boccuto/Desktop/Speech-Emotion-Recognition/Paper/ESD_SAVEE_testing.ipynb#X22sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# TODO fix sample rate\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/Alessandra%20Boccuto/Desktop/Speech-Emotion-Recognition/Paper/ESD_SAVEE_testing.ipynb#X22sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m ESD_model\u001b[39m.\u001b[39;49mevaluate(SAVEE_test_ds)\n",
-      "File \u001b[1;32md:\\Programmi\\venvs\\tf-gpu\\lib\\site-packages\\keras\\utils\\traceback_utils.py:67\u001b[0m, in \u001b[0;36mfilter_traceback.<locals>.error_handler\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m     65\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mException\u001b[39;00m \u001b[39mas\u001b[39;00m e:  \u001b[39m# pylint: disable=broad-except\u001b[39;00m\n\u001b[0;32m     66\u001b[0m   filtered_tb \u001b[39m=\u001b[39m _process_traceback_frames(e\u001b[39m.\u001b[39m__traceback__)\n\u001b[1;32m---> 67\u001b[0m   \u001b[39mraise\u001b[39;00m e\u001b[39m.\u001b[39mwith_traceback(filtered_tb) \u001b[39mfrom\u001b[39;00m \u001b[39mNone\u001b[39m\n\u001b[0;32m     68\u001b[0m \u001b[39mfinally\u001b[39;00m:\n\u001b[0;32m     69\u001b[0m   \u001b[39mdel\u001b[39;00m filtered_tb\n",
-      "File \u001b[1;32md:\\Programmi\\venvs\\tf-gpu\\lib\\site-packages\\tensorflow\\python\\eager\\execute.py:54\u001b[0m, in \u001b[0;36mquick_execute\u001b[1;34m(op_name, num_outputs, inputs, attrs, ctx, name)\u001b[0m\n\u001b[0;32m     52\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m     53\u001b[0m   ctx\u001b[39m.\u001b[39mensure_initialized()\n\u001b[1;32m---> 54\u001b[0m   tensors \u001b[39m=\u001b[39m pywrap_tfe\u001b[39m.\u001b[39mTFE_Py_Execute(ctx\u001b[39m.\u001b[39m_handle, device_name, op_name,\n\u001b[0;32m     55\u001b[0m                                       inputs, attrs, num_outputs)\n\u001b[0;32m     56\u001b[0m \u001b[39mexcept\u001b[39;00m core\u001b[39m.\u001b[39m_NotOkStatusException \u001b[39mas\u001b[39;00m e:\n\u001b[0;32m     57\u001b[0m   \u001b[39mif\u001b[39;00m name \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n",
-      "\u001b[1;31mInvalidArgumentError\u001b[0m: Graph execution error:\n\n2 root error(s) found.\n  (0) INVALID_ARGUMENT:  Expected begin[0] in [0, 34927], but got 64000\n\t [[{{node Slice}}]]\n\t [[IteratorGetNext]]\n\t [[IteratorGetNext/_4]]\n  (1) INVALID_ARGUMENT:  Expected begin[0] in [0, 34927], but got 64000\n\t [[{{node Slice}}]]\n\t [[IteratorGetNext]]\n0 successful operations.\n0 derived errors ignored. [Op:__inference_test_function_13245]"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 3s 3s/step - loss: 41.9087 - accuracy: 0.1964\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[41.90869140625, 0.1964285671710968]"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# TODO fix sample rate\n",
-    "# ESD_model.evaluate(SAVEE_test_ds)"
+    "ESD_model.evaluate(SAVEE_test_ds)"
    ]
   }
  ],
