--- a/Paper/ESD_SAVEE_testing.ipynb
+++ b/Paper/ESD_SAVEE_testing.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
        "(44100, 16000)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,28 +109,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 'crop_norm'\n",
     "data_preprocessing = lambda _: [\n",
     "        data_ops.Crop(),\n",
-    "        data_ops.Normalize()]\n",
-    "\n",
-    "# data_preprocessing_for_SAVEE = lambda _: [ \n",
-    "#         data_ops.Crop(),\n",
-    "#         data_ops.Normalize()\n",
-    "#         ]"
+    "        data_ops.Normalize()]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# remove from SAVEE label f and d because they'r not present as label in ESD\n",
+    "# remove from SAVEE label f and d because they'r not present as labelS in ESD\n",
     "SAVEE_df = SAVEE_df.drop(columns=[\"label_f\", \"label_d\"])\n",
     "\n",
     "SAVEE_df = SAVEE_df.loc[SAVEE_df[\"label\"] != \"f\"]\n",
@@ -139,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +143,7 @@
        "array(['a', 'h', 'n', 'sa', 'su'], dtype=object)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -212,27 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<ParallelMapDataset element_spec=(TensorSpec(shape=(64000, 1), dtype=tf.float32, name=None), TensorSpec(shape=(5,), dtype=tf.uint8, name=None))>"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ESD_test_ds"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -279,32 +254,12 @@
     }
    ],
    "source": [
-    "_, _, SAVEE_test_ds, _ = data_loader.load_datasets(SAVEE_df, ESD_max_sample_rate, 4, data_preprocessing, [70, 15, 15])"
+    "_, _, SAVEE_test_ds, _ = data_loader.load_datasets(SAVEE_df, ESD_max_sample_rate, 4, data_preprocessing, [10, 10, 80])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<ParallelMapDataset element_spec=(TensorSpec(shape=(64000, 1), dtype=tf.float32, name=None), TensorSpec(shape=(5,), dtype=tf.uint8, name=None))>"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "SAVEE_test_ds"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -395,14 +350,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "41/41 [==============================] - 32s 683ms/step - loss: 2.0560 - accuracy: 0.7172\n"
+      "41/41 [==============================] - 30s 651ms/step - loss: 2.0560 - accuracy: 0.7172\n"
      ]
     },
     {
@@ -411,7 +366,7 @@
        "[2.055967092514038, 0.7171755433082581]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,23 +377,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 3s 3s/step - loss: 41.9087 - accuracy: 0.1964\n"
+      "5/5 [==============================] - 6s 854ms/step - loss: 38.4288 - accuracy: 0.1858\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[41.90869140625, 0.1964285671710968]"
+       "[38.42875289916992, 0.18581080436706543]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
