add savee model

--- a/Paper/ESD_SAVEE_testing.ipynb
+++ b/Paper/ESD_SAVEE_testing.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
        "(44100, 16000)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,6 +89,345 @@
    "metadata": {},
    "source": [
     "## Best SAVEE on ESD"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-11-06 18:14:52.609517: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2022-11-06 18:14:53.116830: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2022-11-06 18:14:53.118820: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2022-11-06 18:14:53.141122: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2022-11-06 18:14:53.149095: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2022-11-06 18:14:53.150826: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2022-11-06 18:14:53.152745: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2022-11-06 18:14:58.621527: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2022-11-06 18:14:58.622242: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2022-11-06 18:14:58.622775: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:975] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2022-11-06 18:14:58.623235: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1532] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 3398 MB memory:  -> device: 0, name: NVIDIA GeForce 940MX, pci bus id: 0000:01:00.0, compute capability: 5.0\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_79\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " conv1d_553 (Conv1D)         (None, 132280, 32)        704       \n",
+      "                                                                 \n",
+      " batch_normalization_553 (Ba  (None, 132280, 32)       128       \n",
+      " tchNormalization)                                               \n",
+      "                                                                 \n",
+      " max_pooling1d_474 (MaxPooli  (None, 66140, 32)        0         \n",
+      " ng1D)                                                           \n",
+      "                                                                 \n",
+      " conv1d_554 (Conv1D)         (None, 66122, 64)         38976     \n",
+      "                                                                 \n",
+      " batch_normalization_554 (Ba  (None, 66122, 64)        256       \n",
+      " tchNormalization)                                               \n",
+      "                                                                 \n",
+      " max_pooling1d_475 (MaxPooli  (None, 33061, 64)        0         \n",
+      " ng1D)                                                           \n",
+      "                                                                 \n",
+      " conv1d_555 (Conv1D)         (None, 33045, 128)        139392    \n",
+      "                                                                 \n",
+      " batch_normalization_555 (Ba  (None, 33045, 128)       512       \n",
+      " tchNormalization)                                               \n",
+      "                                                                 \n",
+      " max_pooling1d_476 (MaxPooli  (None, 16522, 128)       0         \n",
+      " ng1D)                                                           \n",
+      "                                                                 \n",
+      " conv1d_556 (Conv1D)         (None, 16508, 256)        491776    \n",
+      "                                                                 \n",
+      " batch_normalization_556 (Ba  (None, 16508, 256)       1024      \n",
+      " tchNormalization)                                               \n",
+      "                                                                 \n",
+      " max_pooling1d_477 (MaxPooli  (None, 8254, 256)        0         \n",
+      " ng1D)                                                           \n",
+      "                                                                 \n",
+      " conv1d_557 (Conv1D)         (None, 8242, 512)         1704448   \n",
+      "                                                                 \n",
+      " batch_normalization_557 (Ba  (None, 8242, 512)        2048      \n",
+      " tchNormalization)                                               \n",
+      "                                                                 \n",
+      " max_pooling1d_478 (MaxPooli  (None, 4121, 512)        0         \n",
+      " ng1D)                                                           \n",
+      "                                                                 \n",
+      " conv1d_558 (Conv1D)         (None, 4111, 1024)        5768192   \n",
+      "                                                                 \n",
+      " batch_normalization_558 (Ba  (None, 4111, 1024)       4096      \n",
+      " tchNormalization)                                               \n",
+      "                                                                 \n",
+      " max_pooling1d_479 (MaxPooli  (None, 2055, 1024)       0         \n",
+      " ng1D)                                                           \n",
+      "                                                                 \n",
+      " conv1d_559 (Conv1D)         (None, 2047, 1024)        9438208   \n",
+      "                                                                 \n",
+      " batch_normalization_559 (Ba  (None, 2047, 1024)       4096      \n",
+      " tchNormalization)                                               \n",
+      "                                                                 \n",
+      " global_max_pooling1d_79 (Gl  (None, 1024)             0         \n",
+      " obalMaxPooling1D)                                               \n",
+      "                                                                 \n",
+      " dense_158 (Dense)           (None, 128)               131200    \n",
+      "                                                                 \n",
+      " dense_159 (Dense)           (None, 7)                 903       \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 17,725,959\n",
+      "Trainable params: 17,719,879\n",
+      "Non-trainable params: 6,080\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "SAVEE_model = keras.models.load_model(\"./saved_models/mPaperModel_s3_b16_d0_p80_o_crop_fade15_sz62.5,20.833,16.666/\")\n",
+    "SAVEE_model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_preprocessing = lambda total_audio_frames: [\n",
+    "  data_ops.Crop(),\n",
+    "  data_ops.Fade(total_audio_frames * 0.15, total_audio_frames * 0.15),\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# remove from SAVEE label f and d because they'r not present as labelS in ESD\n",
+    "ESD_df[\"label_f\"] = 0 # SAVEE_df.drop(columns=[\"label_f\", \"label_d\"])\n",
+    "ESD_df[\"label_d\"] = 0 # SAVEE_df.drop(columns=[\"label_f\", \"label_d\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-11-06 20:40:08.283638: I tensorflow_io/core/kernels/cpu_check.cc:128] Your CPU supports instructions that this TensorFlow IO binary was not compiled to use: AVX2 FMA\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:Using a while_loop for converting IO>AudioResample\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:Using a while_loop for converting IO>AudioResample\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:Using a while_loop for converting IO>AudioResample\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:Using a while_loop for converting IO>AudioResample\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:Using a while_loop for converting IO>AudioResample\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:Using a while_loop for converting IO>AudioResample\n"
+     ]
+    }
+   ],
+   "source": [
+    "_, _, SAVEE_test_ds, _ = data_loader.load_datasets(SAVEE_df, SAVEE_max_sample_rate, 3, data_preprocessing, [62.5, 20.833, 16.666])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:Using a while_loop for converting IO>AudioResample\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:Using a while_loop for converting IO>AudioResample\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:Using a while_loop for converting IO>AudioResample\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:Using a while_loop for converting IO>AudioResample\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:Using a while_loop for converting IO>AudioResample\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:Using a while_loop for converting IO>AudioResample\n"
+     ]
+    }
+   ],
+   "source": [
+    "_, _, ESD_test_ds, _ = data_loader.load_datasets(ESD_df, SAVEE_max_sample_rate, 3, data_preprocessing, [5, 5, 90])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['a', 'n', 'd', 'su', 'h', 'sa', 'f'], dtype=object)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "SAVEE_df[\"label\"].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['h', 'a', 'su', 'n', 'sa'], dtype=object)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ESD_df[\"label\"].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ESD_test_ds = ESD_test_ds.batch(16)\n",
+    "SAVEE_test_ds = SAVEE_test_ds.batch(16)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-11-06 20:43:47.558394: I tensorflow/stream_executor/cuda/cuda_dnn.cc:384] Loaded cuDNN version 8100\n",
+      "2022-11-06 20:43:58.067647: I tensorflow/core/platform/default/subprocess.cc:304] Start cannot spawn child process: No such file or directory\n",
+      "2022-11-06 20:43:58.069743: I tensorflow/core/platform/default/subprocess.cc:304] Start cannot spawn child process: No such file or directory\n",
+      "2022-11-06 20:43:58.069849: W tensorflow/stream_executor/gpu/asm_compiler.cc:80] Couldn't get ptxas version string: INTERNAL: Couldn't invoke ptxas --version\n",
+      "2022-11-06 20:43:58.075831: I tensorflow/core/platform/default/subprocess.cc:304] Start cannot spawn child process: No such file or directory\n",
+      "2022-11-06 20:43:58.076065: W tensorflow/stream_executor/gpu/redzone_allocator.cc:314] INTERNAL: Failed to launch ptxas\n",
+      "Relying on driver to perform ptx compilation. \n",
+      "Modify $PATH to customize ptxas location.\n",
+      "This message will be only logged once.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7/7 [==============================] - 93s 7s/step - loss: 5.5124 - accuracy: 0.6500\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[5.5123772621154785, 0.6499999761581421]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "SAVEE_model.evaluate(SAVEE_test_ds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SAVEE_model.evaluate(ESD_test_ds)"
    ]
   },
   {
@@ -254,7 +593,7 @@
     }
    ],
    "source": [
-    "_, _, SAVEE_test_ds, _ = data_loader.load_datasets(SAVEE_df, ESD_max_sample_rate, 4, data_preprocessing, [10, 10, 80])"
+    "_, _, SAVEE_test_ds, _ = data_loader.load_datasets(SAVEE_df, ESD_max_sample_rate, 4, data_preprocessing, [0, 0, 100])"
    ]
   },
   {
@@ -405,7 +744,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.10 ('tf-gpu')",
+   "display_name": "Python 3.9.12 ('tf')",
    "language": "python",
    "name": "python3"
   },
@@ -419,12 +758,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "1e5983e64bdf840368ab29cea7e1e8f9b41dcdac8639741a33a347d09d965169"
+    "hash": "871836a5f0f1bf0c6867b75cd438b55e040f08a9d0ea3b5e312386b476fa4aa9"
    }
   }
  },
